# variantcentrifuge

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  .windsurfrules  CLAUDE.md  DOCUMENTATION_SETUP.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MIGRATION_TO_SIMPLIFIED_ARCHITECTURE.md  MODULE_INTERFACES.md  MODULE_INTERFACES_SIMPLIFIED.md  Makefile  PIPELINE_REFACTORING_PLAN.md  PLAN.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_STATUS_REPORT.md  REFACTORING_SUMMARY.md  REFACTORING_TEST_PROTOCOL.md  TESTING_STRATEGY.md  TESTING_WITH_SIMPLIFIED_ARCHITECTURE.md  TODO.md  analysis_stages_review.md  comprehensive_fix.py  config.json  demo_parallel_inheritance.py  docker-compose.yml  environment_local.yml  import_updates_summary.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_new_pipeline.sh  test_pipeline_comparison.sh
.benchmarks/Linux-CPython-3.10-64bit/: 0001_phase7_quick_wins.json  0002_phase8_dataframe_io.json  0003_phase8_inheritance_gene_burden.json  0004_phase9_vectorization.json
.benchmarks/Windows-CPython-3.10-64bit/: 0001_baseline_v0.12.1.json
.github/workflows/: docker.yml  docs-seo.yml  docs.yml  test.yml
.planning/: ASSOCIATION-FRAMEWORK-DESIGN.md  ASSOCIATION_REMAINING_WORK.md  COAST_STATUS_AND_FIX_PLAN.md  MILESTONES.md  PROJECT.md  PURE_PYTHON_COAST_PLAN.md  REMAINING_WORK.md  REPORT-UX-ASSESSMENT.md  REQUIREMENTS.md  ROADMAP.md  SKAT_OPTIMIZATION_PLAN.md  STATE.md  TECH_DEBT.md  association-performance-investigation.md  inheritance-performance-analysis.md  issue-assessment-and-roadmap.md  performance-analysis-report.md  resource-auto-detection-plan.md  v0.15.0-MILESTONE-AUDIT.md
.planning/milestones/: v0.13.0-MILESTONE-AUDIT.md  v0.13.0-REQUIREMENTS.md  v0.13.0-ROADMAP.md  v0.15.0-REQUIREMENTS.md  v0.15.0-ROADMAP.md  v0.16.0-MILESTONE-AUDIT.md  v0.16.0-REQUIREMENTS.md  v0.16.0-ROADMAP.md  v0.17.0-MILESTONE-AUDIT.md  v0.17.0-REQUIREMENTS.md  v0.17.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/: .gitignore
conda/: environment-docker.yml  environment.yml
config/: README.md  config_vc.yaml  samples.tsv
docs/: Makefile  compound_het_performance.md  requirements.txt
docs/source/: changelog.md  conf.py  configuration.md  contributing.md  development.md  faq.md  index.md  installation.md  resume_system.md  usage.md
examples/: test_pseudonymization.py
profiles/bih/: config.v8+.yaml
profiles/charite/: config.v8+.yaml
profiles/default/: config.v8+.yaml
profiles/local/: config.v8+.yaml
refactoring/: 01_CONFIGURATION_STAGE_ANALYSIS.md  02_VARIANT_EXTRACTION_STAGE_ANALYSIS.md  03_DATA_PROCESSING_STAGE_ANALYSIS.md  04_ANALYSIS_STAGE_ANALYSIS.md  05_OUTPUT_STAGE_ANALYSIS.md  CLI_FLAG_IMPLEMENTATION_ANALYSIS.md  FINAL_COMPLETION_PLAN.md  FIX_VAR_ID_AND_ANNOTATIONS.md  IMPLEMENTATION_STATUS_GAPS.md  QUICK_CHECKLIST.md  README.md  REFACTORING_SUMMARY.md  REGRESSION_TEST_FINAL_STATUS.md  REGRESSION_TEST_FIXES_SUMMARY.md  REGRESSION_TEST_FIX_PLAN.md  REGRESSION_TEST_ISSUES.md  STAGE_TESTING_ANALYSIS.md  TESTING_COVERAGE_REVIEW.md
scoring/inheritance_score/: formula_config.json  variable_assignment_config.json
scoring/nephro_candidate_score/: formula_config.json  variable_assignment_config.json
scoring/nephro_candidate_score_v5/: formula_config.json  variable_assignment_config.json
scoring/nephro_variant_score/: formula_config.json  variable_assignment_config.json
scoring/test_simple_score/: formula_config.json  variable_assignment_config.json
scripts/: README.md  create_cohort_report.py  generate_coast_golden.R  run_snakemake.sh  validate_inheritance.py
scripts/templates/: cohort_report_template.html
snakemake/: README_snakemake.md  config_vc.yaml  run_variantcentrifuge.sh  variantcentrifuge.smk
stats_configs/: README.md  clinical_focus_stats.json  example_custom_stats.json
test_files/: test.vcf
test_output_old/bed_cache/: genes_ea165cd34f78871464d0fe37638c727f.bed
tests/: __init__.py  conftest.py  test_analysis_stages.py  test_annotator.py  test_archive_results.py  test_checkpoint.py  test_checkpoint_parallel.py  test_checkpoint_parallel_resume.py  test_checkpoint_resume.py  test_chunked_improvements.py  test_chunked_integration.py  test_chunked_processing.py  test_chunked_vs_nonchunked.py  test_cli.py  test_cli_argument_parsing.py  test_extra_sample_fields_comprehensive.py  test_filters.py  test_final_filter_integration.py  test_final_filter_simple.py  test_gene_burden.py  test_gene_burden_comprehensive.py  test_gene_burden_integration.py  test_gene_burden_regression.py  test_gene_list_annotation.py  test_gene_list_integration.py  test_genotype_utils.py  test_igv_report_generation.py  test_igv_utils.py  test_ped_reader.py  test_pipeline_integration.py  test_pseudonymizer.py  test_replacer.py  test_replacer_missing_allele.py  test_sample_column_creation.py  test_scoring.py  test_scoring_annotated.py  test_scoring_columns.py  test_scoring_inheritance.py  test_scoring_integration.py  test_sort_tsv_by_gene.py  (+4 more)
tests/fixtures/: create_test_vcf_for_regression.py  test_config.json  test_regions.bed  test_regression_variants.GRCh37.annotated.vcf.gz.tbi  test_variants.GRCh37.vcf  test_variants.GRCh38.vcf  test_variants_scoring.GRCh37.annotated.vcf.gz.tbi  test_variants_scoring.GRCh37.vcf  (+1 more)
tests/mocks/: __init__.py  (+2 more)
variantcentrifuge/: __init__.py  _davies_build.py  analyze_variants.py  annotator.py  build_pm5_lookup.py  checkpoint.py  cli.py  clinvar_pm5.py  config.json  config.py  converter.py  dataframe_optimizer.py  default_stats_config.json  display_utils.py  extractor.py  field_profile.py  filters.py  gene_bed.py  gene_burden.py  generate_html_report.py  generate_igv_report.py  genotype_utils.py  helpers.py  interactive_resume.py  links.py  parallel_genotype_processor.py  ped_reader.py  phenotype.py  phenotype_filter.py  pipeline.py  pipeline_refactored.py  pseudonymizer.py  replacer.py  scoring.py  stage_info.py  stats.py  stats_engine.py  utils.py  validators.py  vcf_eff_one_per_line.py  (+4 more)
workflow/: Snakefile
(+608 files in other folders)
